--- a/content/css/rantan.css
+++ b/content/css/rantan.css
@@ -427,7 +427,7 @@ body {
 
 .background {
   background-attachment: fixed;
-  background-image: url("https://workbook.quicksearch.se/ui/Images/login_bg7.jpg");
+  background-image: url("../bg7.jpg");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
